Set up sbt